# lcView

./: .gitignore  AGENTS.md  FUTURE.md  PLAN.md  README.md  lcView-env.yml  lcView.bash  lcView.sh  lcdft.py  lcf.data  lcf.trf  pyproject.toml  temp_dft
scripts/: TESS_lc_time-median.py  boxcar.py  breeze_resources.py  freqs_plot.py  lcdft.bash  lcdft.py  lcdft.sh  lcdft.ui  pet.py  pet.ui
scripts/.temp_lcView/: combs_plot  freqs_plot  harms2_plot  harms_plot  lcf.data
scripts/styles/: light.qss
src/lcview/: __init__.py  app.py  display.py
src/lcview/core/: __init__.py  combinations.py  detrending.py  frequency_model.py  lightcurve.py  periodogram.py  phase.py  prewhitening.py  results.py  session.py  sigma_clip.py  tdfd.py
src/lcview/legacy/: __init__.py  formats.py  parsers.py
src/lcview/native/: __init__.py  build.py  fwpeaks.c  hars-ite.f  hars-sin.f  smart-uf-fina-smars.f  uf2.f
src/lcview/resources/styles/: light.qss
src/lcview/ui/: __init__.py  column_selection_dialog.py  detrend_dialog.py  main_window.py  models.py  plots.py  prewhitening_panel.py  results_panel.py  sigma_clip_dialog.py  tdfd_panel.py  widgets.py
tests/: test_column_selection_dialog.py  test_frequency_model.py  test_legacy_formats.py  test_lightcurve_loading.py  test_main_window_smoke.py  test_phase.py  test_prewhitening_engine.py  test_sigma_clip_dialog.py  test_tdfd.py  test_ui_models.py
