[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lcview"
version = "0.2.0"
description = "Interactive light-curve DFT and prewhitening workbench."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy>=2,<3",
  "pandas>=2.2,<4",
  "astropy>=6,<8",
  "matplotlib>=3.8,<4",
  "scipy>=1.12,<2",
  "PySide6>=6.6,<7",
  "pyqtgraph>=0.13,<0.15",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
lcview = "lcview.app:main"
lcview-prewhiten = "lcview.app:prewhiten_main"

[tool.setuptools.package-data]
lcview = [
  "native/*.c",
  "native/*.f",
  "resources/styles/*.qss",
  "resources/data/*.dat",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
